feat(store/): beatmap_failtimes + rewrite init_log
